--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -18,11 +18,7 @@
     "dotenv": "^12.0.3",
     "express": "^4.17.2",
     "mongoose": "^6.1.6",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.7"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.7"
+    "morgan": "^1.10.0"
   },
   "bugs": {
     "url": "https://github.com/priya2002hello/Task-Manager/issues"
